2008-11-02  Gabor Csardi  <csardi@szaffi>

	* interfaces/R/igraph/R/conversion.R (get.incidence) : added
	support for attributes

	* interfaces/R/igraph/R/conversion.R (get.incidence) : added
	support for vertex names

	* interfaces/R/igraph/R/conversion.R (get.incidence) : updated,
	sparse matrix support was added

	* interfaces/R/igraph/R/conversion.R (get.incidence) : added

	* interfaces/R/igraph/R/structure.generators.R
	(graph.incidence) : added sparse graph support

	* interfaces/R/igraph/R/structure.generators.R
	(graph.incidence) : added 'weighted' argument

2008-11-01  Gabor Csardi  <csardi@szaffi>

	* interfaces/R/igraph/R/structure.generators.R
	(graph.incidence) : 'directed' argument added, remove unnneded 
	'add.colnames' attribute

	* interfaces/R/igraph/R/structure.generators.R
	(graph.incidence) : added

2008-10-31  Gabor Csardi  <csardi@szaffi>

	* interfaces/R/igraph/R/structure.generators.R
	(graph.bipartite) : added

2008-10-27  Gabor Csardi  <csardi@szaffi>

	* interfaces/R/igraph/R/structure.generators.R
	(graph.full.bipartite) : added

2008-10-24  Gabor Csardi  <csardi@szaffi>

	* interfaces/R/igraph/R/print.R (print.igraph) : quote symbolic
	vertex names by default

	* interfaces/R/igraph/R/structural.properties.R (shortest.paths)
	* interfaces/R/src/rinterface.c.in (R_igraph_shortest_paths) :
	make it possible to choose shortest path algorithm by hand
	
	* interfaces/R/src/rinterface.c.in (R_igraph_shortest_paths) :
	call Johnson's algorithm, if appropriate

2008-09-26  Gabor Csardi  <csardi@szaffi>

	* interfaces/R/igraph/R/CohesiveBlocks.R (cohesive.blocks) : 
	add 'cutsetAlgorithm' argument

	* interfaces/R/igraph/R/flow.R (igraph.mincut) : report error 
	if (unimplemented) s-t minimum cut is requested

2008-08-20  Gabor Csardi  <csardi@szaffi>

	* interface/R/igraph/R/conversion.R (get.adjacency.sparse) : 
	fixed a bug, when graph.adjacency.sparse is called with 
	a named graph

2008-07-21  Gabor Csardi  <csardi@rmki.kfki.hu>
